static/css/pba.css
/* ... */
.nav-header img:first-child {
  display: inline-block;
  height: 5em;
  padding-left: 2em;
  padding-top: 2em;
  padding-bottom: 2em;
}

.nav-header ul {
  margin: 0;
  padding: 0;
  display: inline-block;
}

.nav-header ul:first-child {
  position: absolute;
  bottom: 0;
}

.nav-header li {
  list-style-type: none;
  padding: .75em;
  margin: 0;
  text-align: center;
  display: inline-block;
  float: left;
}

.nav-header a {
  color: white;
  text-shadow:
    -1px -1px 0 #555,
    1px -1px 0 #555,
    -1px 1px 0 #555,
    1px 1px 0 #555;
  text-decoration: none;
  font-weight: 700;
  font-size: 1.75em;
}

.nav-header li ul {
  display: none;
  position: absolute;
  z-index: 1;
  margin-left: -.75em;
  background-color: #d8107d;
}

.nav-header li ul li {
  float: none;
  display: list-item;
}

.nav-header li ul li:first-child {
  margin-top: .75em;
}

.nav-header li:hover {
  background-color: #d8107d;
}

.nav-header li:has(ul)::after {
  content: '⌄';
  position: relative;
  bottom: .4em;
  color: white;
  text-shadow:
    -1px -1px 0 #555,
    1px -1px 0 #555,
    -1px 1px 0 #555,
    1px 1px 0 #555;
}

.nav-header li:hover ul {
  display: block;
}

.nav-header li ul:hover {
  display: block;
}

.nav-header li ul li:hover {
  background-color: #70bf44;
}

.nav-header li:has(a.current_branch) {
  background-color: #d8107d;
}

.nav-header li ul li:has(a.current_item) {
  background-color: #70bf44;
}

.mobile-nav-header {
  display: none;
  float: right;
  padding: 0;
  position: sticky;
  position: -webkit-sticky;
  z-index: 100;
}

@media only screen and (max-width: 675px) {

  * {
    scroll-margin-top: 5em;
  }

  .header {
    height: 4em;
  }

  .img-header {
    height: 3em;
  }

  .img-header img {
    height: 2em;
  }

  .nav-header img:first-child {
    height: 1em;
    padding-left: 1em;
    padding-top: 1em;
    padding-bottom: 1em;
  }

  .nav-header ul { display: none; }

  .mobile-nav-header {
    display: block;
  }

  .mobile-nav-header ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }

  .mobile-nav-header a {
    color: white;
    text-decoration: none;
    font-size: 1.75em;
    font-weight: 700;
    text-shadow:
      -1px -1px 0 #555,
      1px -1px 0 #555,
      -1px 1px 0 #555,
      1px 1px 0 #555;
    display: block;
  }

  #menu-icon {
    position: absolute;
    top: 1em;
    right: 1em;
  }

  #menu-icon ~ ul {
    display: none;
  }

  #mobileNavTree {
    display: none;
    position: absolute;
    right: 0em;
    top: 4em;
    z-index: 5;
  }

  .mobile-nav-header ul li {
    padding-bottom: 0;
  }

  .mobile-nav-header ul li:last-child {
    padding-bottom: .25em;
  }

  .mobile-nav-header ul li ul li {
    width: 9em;
  }

  .mobile-nav-header li {
    width: 10em;
    padding: .25em;
    text-align: left;
    background-color: #70bf44;
    padding-left: 1em;
    padding-right: 1em;
  }

  .mobile-nav-header li ul {
    background-color: #d8107d;
    z-index: 1;
  }

  .mobile-nav-header li:hover {
    background-color: #d8107d;
  }

  .mobile-nav-header li:has(a.current_branch) {
    background-color: #d8107d;
  }

  .mobile-nav-header ul li ul li:has(a.current_item) {
    background-color: #d8107d;
  }
}

/* Messages */
.messages {
  background: #d8107d;
  margin: 0 auto;
  width: 100%;
  color: #E8E8E8;
  text-align: center;
}

box-icon {
  position: relative;
  top: .25em;
}

.messages box-icon {
  position:relative;
  float: left;
  display: block;
  top: -.25em;
}

.messages .alert {
  margin: 0 auto;
  padding: .5em;
  display: block;
}

.messages .alert span {
  margin: 0 auto;
}

/* Page Content */

.content-container {
  width: 90%;
  margin: 0 auto;
  margin-bottom: 1em;
}
@media screen and (max-width: 40rem) {
  .content-container {
    width: 95%;
  }
}

/* Footer */
.footer {
  width: 100vw;
  margin: 0 auto;
  text-align: center;
  background-color: black;
  color: white;
  margin-top: auto;
  text-shadow:
    -1px -1px 0 #555,
    1px -1px 0 #555,
    -1px 1px 0 #555,
    1px 1px 0 #555;
}

.footer .footer-row {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.footer .footer-row .footer-column {
  margin: 1em;
  min-width: 10em;
  width: 25%;
}

.footer .copyright {
  padding: 1em;
  background-color: #70bf44;
}

/* Forms */

form {
  padding: 1em;
}
.form-container {
  width: 90%;
  max-width: 40rem;
  margin: 0 auto;
  border-radius: 5px;
  border-radius: 1em;
  border: 1px solid black;
  padding: 1em;
}
.form-header {
  width: 95%;
  max-width: 40rem;
  margin: auto;
  border-radius: 5px;
  margin-bottom: 1em;
  text-align: center;
}
.form-header img {
  padding: 1em;
  width: 50%;
}
.form-footer {
  font-size: smaller;
  color: grey;
}
form label {
  width: 9em;
  margin-bottom: .25em;
  margin-right: 1em;
  display: block;
  float: left;
}
form textarea {
  max-width: 20em;
  width: 90%;
}
form label[for=id_captcha] {
  display: none;
}
form .helptext {
  padding-top: .5em;
  display: block;
  font-size: smaller;
  color: #404040;
  clear: both;
}
form .errorlist {
  list-style: none;
  color: red;
  padding-inline-start: 1em;
  padding-bottom: .5em;
}
form p {
  margin-block-start: 0em;
  margin-block-end: 0em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}
form p + p {
  padding-top: .5em;
}
form ul {
  font-size: smaller;
  margin-block-start: .5em;
  margin-block-end: 0em;
}
form .g-recaptcha {
  padding-bottom: 0em;
}
form select {
  max-width: 11em;
}
form input[type=checkbox] {
  margin-right: 10em;
}

form #id_donation_tier > div {
  display: block;
  clear: both;
  padding-left: 1em;
}

form.application-form label {
  width: 100%;
  float: unset;
  font-weight: 500;
  margin-bottom: .5em;
}

form.application-form input {
  width: 100%;
  max-width: unset;
}

form.application-form textarea {
  width: 100%;
  max-width: unset;
}

form.application-form input[type=checkbox] {
  width: auto;
}
/* ... */

